--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;700&display=swap');
+
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
@@ -5,8 +7,6 @@
   font-weight: normal;
   font-style: normal;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;700&display=swap');
 /* =======================================================
 *
 * 	Template Style 
@@ -146,7 +146,7 @@ header {
 }
 /* end Header Section */
 
-/* #page {
+#page {
   max-width: 1440px;
   display: flex;
   flex-direction: column;
@@ -177,7 +177,7 @@ header {
   z-index: 101;
   background: rgba(0, 0, 0, 0.7);
   content: "";
-} */
+}
 
 .spaceHeader {
   width: 100%;
@@ -236,6 +236,14 @@ input:focus, select:focus {
 .containerCalculadora {
   text-align: center;
   margin-top: 2rem;
+}
+
+.dadosAssinante {
+  color: #f2e0c2;
+  border: none;
+  font-size: 14px;
+  font-weight: normal;
+  text-align: start;
 }
 
 .btn-orange {
@@ -2026,7 +2034,6 @@ blockquote p > cite {
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
-
 /* end testimonials */
 
 /* Services */
