--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,24 @@
 * 	Template Style 
 *
 * ======================================================= */
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
+/*  */
+/* Links apenas na página de privacidade */
+body.privacy-page a {
+  color: #fff;
+  text-decoration: none;
+}
+
+body.privacy-page a:hover {
+  text-decoration: underline;
+  color: #e0cfa6;
+  transition: all 0.3s ease-in-out;
+}
+/*  */
 body {
   min-width: 320px;
   font-family: "Merriweather", serif;
@@ -65,8 +83,166 @@ header {
   border: 1px solid #1d1d1d;
 }
 
-/* Menu alinhado à direita ocupando 75% */
+/*  */
+/* Estilização base */
+header {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background-color: #1d1d1d;
+  padding: 1rem 1rem;
+  color: white;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2); /* opcional */
+}
 
+.container-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+/* Logo */
+.logoImg img {
+  width: 160px;
+  border-radius: 12px;
+}
+
+/* Menu */
+.gtco-navigate {
+  display: flex;
+  align-items: center;
+}
+
+.menu15 {
+  display: flex;
+}
+
+.menu15 ul {
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
+  margin-left: 1rem;
+  border-radius: 15px;
+}
+
+.menu15 ul li a {
+  color: #a58e69;
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: color 0.3s ease;
+}
+
+.menu15 ul li a.active {
+  color: #f2e0c2;
+  text-decoration: underline;
+}
+
+/* Botão hamburguer */
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  gap: 5px;
+  background-color: #333;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.menu-toggle span {
+  display: block;
+  width: 20px;
+  height: 3px;
+  background-color: #a58e69;
+  border-radius: 5px;
+}
+
+/* Botão de fechar */
+.menu-close {
+  display: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  color: #f2e0c2;
+  cursor: pointer;
+}
+
+.menu15.active .menu-close {
+  display: block;
+}
+
+/* ------------ MOBILE ------------ */
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: flex;
+    margin-left: auto;
+  }
+
+  .menu15 {
+    display: none;
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    background-color: #444;
+    padding: 1rem;
+    border-radius: 12px;
+    z-index: 1000;
+    width: auto;
+    min-width: 200px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  }
+
+  .menu15.active {
+    display: block;
+    animation: slideDown 0.3s ease forwards;
+  }
+
+  .menu15 ul {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .menu-close.active {
+    display: block;
+  }
+
+  .menu-toggle.hide {
+    display: none;
+  }
+
+  .container-header {
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
+
+  .gtco-navigate {
+    position: relative;
+  }
+}
+
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    transform: translateY(-10%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/*  */
+
+/* Menu alinhado à direita ocupando 75% */
 .menu-1 ul {
   list-style: none;
   margin: 0;
@@ -80,17 +256,10 @@ header {
 
 .menu-1 ul li a {
   text-decoration: none;
-  color: #1d1d1d;
   font-weight: bold;
   transition: color 0.3s ease;
   padding: 10px 15px;
 }
-
-.menu-1 ul li a:hover,
-.menu-1 ul li.active a {
-  color: #007bff;
-}
-
 /* end Header Section */
 
 /* Ícone do WhatsApp */
@@ -122,18 +291,6 @@ header {
   display: inline;
 }
 
-.menu-1 ul li a {
-  text-decoration: none;
-  color: #555;
-  font-weight: bold;
-  transition: color 0.3s;
-}
-
-.menu-1 ul li a:hover,
-.menu-1 ul li.active a {
-  color: #ff6600;
-}
-
 /* Logo */
 .gtco-logo img {
   height: 40px;
@@ -146,42 +303,9 @@ header {
 }
 /* end Header Section */
 
-/* #page {
-  max-width: 1440px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  overflow-x: hidden;
-  overflow-y: auto;
-  width: 100%;
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
-  padding-top: 10rem;
-} */
-/* .offcanvas #page {
-  overflow: hidden;
-  position: absolute;
-}
-.offcanvas #page:after {
-  -webkit-transition: 2s;
-  -o-transition: 2s;
-  transition: 2s;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 101;
-  background: rgba(0, 0, 0, 0.7);
-  content: "";
-} */
-
 .spaceHeader {
   width: 100%;
-  padding-top: 20rem;
+  padding-top: 3rem;
 }
 
 /* Calculator Section */
@@ -401,10 +525,12 @@ h1, h2, h3, h4, h5, h6, figure {
     display: none;
   }
 }
+
 .gtco-nav ul {
   padding: 0;
   margin: .4em 0 0 0;
 }
+
 .gtco-nav ul li {
   padding: 0;
   margin: 0;
@@ -415,11 +541,11 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .gtco-nav ul li > a {
   text-transform: uppercase;
-  font-size: 16px !important;
+  font-size: 14px !important;
   letter-spacing: .05em;
 }
 .gtco-nav ul li a {
-  font-size: 18px;
+  font-size: 14px;
   padding: 30px 10px;
   color: #a58e69;
   -webkit-transition: 0.5s;
@@ -523,7 +649,6 @@ h1, h2, h3, h4, h5, h6, figure {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
@@ -678,7 +803,6 @@ h1, h2, h3, h4, h5, h6, figure {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
 }
 
 .gtco-testimonial .gtco-testimony {
@@ -932,13 +1056,11 @@ h1, h2, h3, h4, h5, h6, figure {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
 }
 .gtco-social-icons li a {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
   color: #52D681;
   padding-left: 10px;
   padding-right: 10px;
@@ -1311,7 +1433,7 @@ blockquote p > cite {
   outline: none;
 }
 
-.gtco-nav-toggle {
+/* .gtco-nav-toggle {
   width: 25px;
   height: 25px;
   cursor: pointer;
@@ -1409,7 +1531,7 @@ blockquote p > cite {
   .gtco-nav-toggle {
     display: block;
   }
-}
+} */
 
 .btn {
   margin-right: 4px;
@@ -2469,6 +2591,7 @@ blockquote p > cite {
 .container-about {
   max-width: 1440px;
   margin: 0 auto;
+  padding-bottom: 6rem;
 }
 
 .about-content {
@@ -2518,6 +2641,7 @@ blockquote p > cite {
   max-width: 350px;
   border-radius: 15px;
   box-shadow: #54545485 0px 5px 10px;
+  border: 2px solid #545454;
   position: relative;
   z-index: 1;
 }
@@ -2532,6 +2656,7 @@ blockquote p > cite {
   bottom: -6px;
   border-radius: 20px;
   background: linear-gradient(5deg, #a58e698c, #a58e698c);
+  border: 2px solid #a58e69;
   z-index: 0; /* Manter a borda atrás da imagem */
 }
 
@@ -2571,7 +2696,6 @@ blockquote p > cite {
   font-family: 'roboto', sans-serif;
   font-style: italic;
   color: #1d1d1d;
-  
 }
 
 @media (max-width: 768px) {
@@ -2933,13 +3057,32 @@ blockquote p > cite {
     font-size: 10px;
   }
 }
-
 /* end Modal */
 
 /* Copyright */
 .footer-copyright {
-  padding-top: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  padding: 0.5rem 0;
   background-color: #a58e69;
+}
+
+.classCopyright p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.classCopyright a {
+  color: #1d1d1d;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 .textFooter {
@@ -2960,5 +3103,3 @@ blockquote p > cite {
   }
 }
 /* end Copyright */
-
-/*# sourceMappingURL=style.css.map */
